# simple-telegram-client

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  exceptions.py  main.py  models.py  storage.py  utils.py
app/api/v1/: endpoints.py
app/dependencies/: auth.py
app/exceptions/: exceptions.py  handlers.py
app/security/: crypto.py
app/services/: session.py
