[project]
name = "simple-tg-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Tarletskiy",email = "alexander.tarletsky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "telethon (>=1.37.0,<2.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic[dotenv] (>=2.10.6,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
